# Plant-Growth-Simulator

./: README.md  a.out  blank_question.c  blank_question.h  bquestion.txt  cquestion.txt  jquestion.txt  list.h  main.c  pquestion.txt  practice.c  question.c  question.h  squestion.txt  sunflower.txt  test.txt  test_system.c  test_system.h  项目实现.md
UI-project/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
UI-project/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
UI-project/UI/images/: ui_img_1138793207.c  ui_img_1606731336.c  ui_img_1745983305.c  ui_img_178160675.c  ui_img_1795366294.c  ui_img_2096096803.c  ui_img_348401948.c  ui_img_354690767.c  ui_img_403432398.c  ui_img_561135566.c  ui_img_577302902.c  ui_img_683165229.c  ui_img_876520695.c  ui_img_bug_spray_png.c  ui_img_fruittrees1_png.c  ui_img_fruittrees2_png.c  ui_img_grass__png.c  ui_img_hoedirt1_png.c  ui_img_hoedirtsnow__png.c  ui_img_letterbg__png.c  ui_img_projectile_star_png.c  ui_img_treefood_png.c  ui_img_uppercaveplants__png.c  ui_img_waterdrop_png.c  ui_img_wateringcan_png.c  ui_img_zen_nextgarden_png.c  ui_img_zen_prevgarden_png.c
UI-project/UI/screens/: ui_IllustratedScreen1.c  ui_IllustratedScreen2.c  ui_achievementScreen.c  ui_firstscreen.c  ui_initscreen.c  ui_secondscreen.c
UI-project/assets/: ui_font_FontPlant.c  ui_font_FontPlant.fcfg
lvgl-arm/: Cmakelists.txt  lv_conf.h  lv_drv_conf.h  lv_drv_conf_x86.h  main.c
lvgl-arm/UI/: ui.c  ui.h  ui_events.c  ui_events.h
lvgl-arm/UI/screens/: ui_Screen1.c
lvgl-arm/test/: main.c
