SET(SOURCES screens/ui_initscreen.c
    screens/ui_firstscreen.c
    screens/ui_secondscreen.c
    screens/ui_IllustratedScreen1.c
    screens/ui_IllustratedScreen2.c
    screens/ui_achievementScreen.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_back1_png.c
    images/ui_img_876520695.c
    images/ui_img_bug_spray_png.c
    images/ui_img_treefood_png.c
    images/ui_img_wateringcan_png.c
    images/ui_img_561135566.c
    images/ui_img_projectile_star_png.c
    images/ui_img_waterdrop_png.c
    images/ui_img_1795366294.c
    images/ui_img_1138793207.c
    images/ui_img_1606731336.c
    images/ui_img_683165229.c
    images/ui_img_178160675.c
    images/ui_img_zen_nextgarden_png.c
    images/ui_img_354690767.c
    images/ui_img_1745983305.c
    images/ui_img_577302902.c
    images/ui_img_seed1_png.c
    images/ui_img_sprout1_png.c
    images/ui_img_seedling1_png.c
    images/ui_img_mature1_png.c
    images/ui_img_flowering1_png.c
    images/ui_img_403432398.c
    images/ui_img_zen_prevgarden_png.c
    images/ui_img_letterbg__png.c
    images/ui_img_uppercaveplants__png.c
    images/ui_img_sunflower_png.c
    images/ui_img_grass__png.c
    images/ui_img_hoedirt1_png.c
    images/ui_img_hoedirtsnow__png.c
    images/ui_img_seedingframe1_png.c
    images/ui_img_2096096803.c
    images/ui_img_348401948.c
    images/ui_img_fruittrees2_png.c
    images/ui_img_fruittrees1_png.c
    fonts/ui_font_FontPlant.c)

add_library(ui ${SOURCES})
